Fix tittle placement
Why:

* There's a slight difference in the vertical placement of the letters
  between Firefox and Chrome-based browsers in Linux, and Chrome-based
  browsers in other systems including Edge. This vertical placement
  causes the planet hovering animation in the hero title tittle to
  overlap the _i_ in Chrome based browsers and Edge.

This change addresses the issue by:

* Changing the default position to please Chrome, using the current
  value for Firefox or Linux systems.

--- a/src/components/home/hero_section/title/animated_letters.module.scss
+++ b/src/components/home/hero_section/title/animated_letters.module.scss
@@ -20,16 +20,32 @@
   height: 12px;
 
   @include media(">=desktop") {
-    top: 17px;
+    top: 12px;
     left: 6px;
 
     width: 23px;
     height: 23px;
+
+    /**
+     * Fix for letter vertical placement rendering differences.
+     */
+    @-moz-document url-prefix() {
+      top: 17px;
+    }
   }
 }
 
 .glue {
   @media (min-width: 586px) {
     white-space: nowrap;
+  }
+}
+
+/**
+ * Fix for letter vertical placement rendering differences.
+ */
+@include media(">=desktop") {
+  .root.linux .planet {
+    top: 17px;
   }
 }
